--- a/index.html
+++ b/index.html
@@ -1,19 +1,57 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-
-  <title>My Resume</title>
-
-  <link rel="stylesheet" href="css/index.css">
-
-  <!--[if lt IE 9]>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
-  <![endif]-->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Digital Resume</title>
 </head>
-
 <body>
-  <h1>My Resume</h1>
+  <div class="container home">
+    <header>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Work History</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
+    <img src="images/batman.jpg" alt="Batman"/>
+    <div class="main-content">
+      <section class="top-content">
+        <h2>Work History</h2>
+        <p class="top-content-p">
+          Lorem, ipsum dolor sit amet consectetur adipisicing
+          elit. Maxime similique ad possimus non nesciunt, quaerat quidem
+          dolores velit placeat iure commodi, tempora aliquam sequi tenetur et
+          illo rem ea quae!
+        </p>
+        <p class="top-content-p">
+          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id fugit at
+          suscipit, magnam blanditiis qui eum magni unde, veritatis quas neque
+          possimus tempora est mollitia ex. Voluptatibus quo inventore itaque.
+        </p>
+      </section>
+      <section class="bottom-content">
+        <h2>My Skills</h2>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad tempore vitae accusamus harum excepturi eius placeat! Eius voluptatem enim, distinctio, aut cumque non dolorum velit inventore pariatur neque omnis voluptatum!
+        </p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat quibusdam quia ipsa ad nam. Soluta veniam doloremque aspernatur amet optio sequi, deleniti accusamus perspiciatis aut, unde perferendis quis asperiores suscipit?
+        </p>
+      </section>
+    </div>
+    <div class="button-parent">
+      <button class="bat-signal-button">Activate Bat Signal</button>
+    </div>
+    <footer class="main-footer">
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Work History</a>
+        <a href="#">Contact</a>
+      </nav>
+    </footer>
+  </div>
 </body>
-</html>
