Made some changes to CSS but not seeing them reflect on page.

--- a/index.html
+++ b/index.html
@@ -16,29 +16,26 @@
         <a href="#">Contact</a>
       </nav>
     </header>
-    <img src="images/batman.jpg" alt="Batman"/>
+    <div class="batman">
+      <img src="images/batman.jpg" alt="Batman"/>
+    </div>
     <div class="main-content">
       <section class="top-content">
         <h2>Work History</h2>
         <p class="top-content-p">
-          Lorem, ipsum dolor sit amet consectetur adipisicing
-          elit. Maxime similique ad possimus non nesciunt, quaerat quidem
-          dolores velit placeat iure commodi, tempora aliquam sequi tenetur et
-          illo rem ea quae!
-        </p>
-        <p class="top-content-p">
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Id fugit at
-          suscipit, magnam blanditiis qui eum magni unde, veritatis quas neque
-          possimus tempora est mollitia ex. Voluptatibus quo inventore itaque.
+          Fighting crime since 1939.
         </p>
       </section>
       <section class="bottom-content">
         <h2>My Skills</h2>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad tempore vitae accusamus harum excepturi eius placeat! Eius voluptatem enim, distinctio, aut cumque non dolorum velit inventore pariatur neque omnis voluptatum!
+          Martial Arts Expert.
         </p>
         <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat quibusdam quia ipsa ad nam. Soluta veniam doloremque aspernatur amet optio sequi, deleniti accusamus perspiciatis aut, unde perferendis quis asperiores suscipit?
+          Exceptional driving skills.
+        </p>
+        <p>
+          Master of stealth.
         </p>
       </section>
     </div>
