Replaced batman.jpg with batarang.jpg and set it to background image for top-content class. Changed background color to gray.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="css/index.css">
   <title>Digital Resume</title>
 </head>
 <body>
@@ -17,12 +18,14 @@
       </nav>
     </header>
     <div class="batman">
-      <img src="images/batman.jpg" alt="Batman"/>
+    </div>
+    <div class="top-content">
+      <p>I am Batman!</p>
     </div>
     <div class="main-content">
-      <section class="top-content">
+      <section class="mid-content">
         <h2>Work History</h2>
-        <p class="top-content-p">
+        <p class="mid-content-p">
           Fighting crime since 1939.
         </p>
       </section>
