Navigation is spaced nicely in header and footer.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Digital Resume</title>
 </head>
 <body>
-  <div class="container home">
+  <div class="container-home">
     <header>
       <nav>
         <a href="#">Home</a>
@@ -35,7 +35,7 @@
           Martial Arts Expert.
         </p>
         <p>
-          Exceptional driving skills.
+          Exceptional driving and skills.
         </p>
         <p>
           Master of stealth.
