Moved CSS code from index.css to index.less. Background image scales properly when screen shrinks.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="batman">
     </div>
     <div class="top-content">
-      <p>I am Batman!</p>
+      <p>Why choose me to lead your next manhunt?<br> The answer is simple. I've put countless villains<br> behind bars in Arkham Asylum. I am Batman!</p>
     </div>
     <div class="main-content">
       <section class="mid-content">
