--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container-home">
     <header>
-      <nav>
+      <nav class="header-nav">
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Work History</a>
@@ -45,7 +45,7 @@
     <div class="button-parent">
       <button class="bat-signal-button">Activate Bat Signal</button>
     </div>
-    <footer class="main-footer">
+    <footer class="footer-nav">
       <nav>
         <a href="#">Home</a>
         <a href="#">About</a>
